# NIMBUS

./: .gitignore  HANDOFF_canonical_event_schema.md  HANDOFF_data_market_broker_model.md  HANDOFF_intent_detection_engine.md  HANDOFF_user_browser_architecture.md  README.md  ai_browser_ingestion.md  data_performance_marketplace.md  pat_coin_launch.md  whitepaper_outline.md
browser/: .env.example  BUILD.gn  README.md  requirements.txt
browser/src/: __init__.py  agent.py  llm_clients.py  marketplace_client.py  qwen_client.py  router.py  router_client.py  schema.py
browser/src/collector/: browsing_data_collector.cc  browsing_data_collector.h  event_types.h  privacy_filter.cc  privacy_filter.h
browser/src/qwen/: intent_analyzer.cc  intent_analyzer.h  qwen_client.cc  qwen_client.h
browser/src/storage/: encrypted_store.cc  encrypted_store.h
browser/tests/: test_agent_unit.py  test_marketplace.py
contracts/: .env.example  hardhat.config.ts  package-lock.json  package.json  tsconfig.json
contracts/contracts/: DataMarketplace.sol  PAT.sol
contracts/deploy/: deploy.ts
contracts/test/: DataMarketplace.test.ts  PAT.test.ts
intent_engine/: DEPLOYMENT.md  README.md  __init__.py
intent_engine/classifiers/: __init__.py  mistral_classifier.py  rasa_classifier.py
intent_engine/deployment/: .env.example  docker-compose.yml
intent_engine/escalation/: __init__.py  deepseek_reasoner.py
intent_engine/ingestion/: rudderstack_config.yml
intent_engine/models/: __init__.py  bigquery_schema.json  intent_models.py  postgres_schema.sql
intent_engine/monitoring/: alert_rules.yml  prometheus.yml
intent_engine/router/: Dockerfile  __init__.py  database.py  gating.py  main.py  requirements.txt
